# OP_Trader

./: .gitignore  CONTRIBUTING.md  DEV_LOG.md  README.md  SUMMARY.md  codex.sh  config.ini  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CURRENT_STRUCTURE.md  README_src_env.md
docs/checklist/: CHECKLIST_DE_DESENVOLVIMENTO_DE_CODIGO.md  CHECKLIST_DE_DESENVOLVIMENTO_DE_PIPELINE.md  CHECKLIST_DE_RASTREAMENTO_DE_MÓDULOS.md
docs/flows/: DEVELOPMENT_FLOW.md  REFACTORING_STEPS.md
docs/homolog/: CHECKLIST_VALIDACAO_PIPELINE_ENV.md  CHECKUP_src_env
docs/meta/: DEVELOP_TABLE.md  REFERENCE_TABLE.md  TAGS_INDEX.md
docs/specs/: FLUXOGRAMAS_PIPELINE_HIERARQUICO.md  SPEC_DataCleanerWrapper.md  SPEC_DataCollector.md  SPEC_DataPipeline.md  SPEC_FeatureCalculator_Refactor.md  SPEC_FeatureEngineer.md  SPEC_MT5Connector.md  SPEC_action_wrapper.md  SPEC_base_env.md  SPEC_config_ini.md  SPEC_data_cleaner.md  SPEC_data_shape_utils.md  SPEC_env_factory.md  SPEC_envioriments.md  SPEC_feature_calculator.md  SPEC_file_saver.md  SPEC_logging_utils.md  SPEC_logging_wrapper.md  SPEC_mt5_connection.md  SPEC_normalization_wrapper.md  SPEC_observation_builder.md  SPEC_observation_wrapper.md  SPEC_outlier_gap_corrector.md  SPEC_path_setup.md  SPEC_position_manager.md  SPEC_reward_aggregator.md  SPEC_reward_wrapper.md  SPEC_risk_manager.md  SPEC_scaler.md  SPEC_scaler_utils.md  SPEC_schema_utils.md  SPEC_trade_logger.md  SPEC_train_env_long.md  SPEC_train_env_short.md  SPEC_validators.md  SPEC_vecnorm_loader.md
patches/: specs_env.diff
(+133 files in other folders)
