[project]
name = "op_trader"
version = "0.1.0"
description = "Pipeline de trading algorítmico com RL, integração MetaTrader5 e validação enterprise."
authors = [
    { name="Seu Nome", email="seu@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/rcerucci/op_trader"

[project.dependencies]
pandas = ">=1.5.0"
numpy = ">=1.24.0"
scikit-learn = "*"
matplotlib = "*"
seaborn = "*"
tqdm = ">=4.64.0"
colorlog = ">=6.7.0"
psutil = "*"
requests = "*"
python-dotenv = "*"
gymnasium = "*"
MetaTrader5 = "*"
stable-baselines3 = "*"
optuna = "*"
openai = "*"
PyGithub = "*"
pydantic = "*"
torch = "==1.13.1+cu117"
torchvision = "==0.14.1+cu117"
torchaudio = "==0.13.1+cu117"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "yapf",
    "mypy",
    "flake8",
    "pre-commit"
]
test = [
    "pytest",
    "pytest-cov"
]
doc = [
    "sphinx",
    "myst-parser"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
